fix spacing of tracks and of over text

--- a/client/src/style/css/format.css
+++ b/client/src/style/css/format.css
@@ -30,6 +30,25 @@
   padding-bottom: 3dvb;
 }
 
+.backbutton
+{
+    background-color: transparent;
+    color:white;
+    border: none;
+    padding-left: 5dvb;
+}
+
+.backbutton:hover
+{
+    color: #1DB954;
+}
+
+.backdiv{
+ display: flex;
+ height: 10dvb;
+ align-items: flex-end;
+}
+
 .deletebutton {
   display: flex;
   width: 100%;
@@ -71,10 +90,15 @@
   border: none;
   background: none;
   color: #1db954;
+  width: 5dvb;
 }
 
 .play-button:hover {
   color: #ffffff;
+}
+
+.over-text {
+    width: 80%;
 }
 
 .name-text {
@@ -83,11 +107,17 @@
 .index-text {
   width: 5dvb;
 }
-
+.track-text{
+    width:10dvb;
+}
+.artist-text{
+    width: 30dvb;
+}
 .artist-image {
   max-width: 60%;
   max-height: 60%;
 }
+
 
 .artist-container {
   list-style-type: none;
@@ -101,9 +131,12 @@
 }
 
 .rank-btn-container {
-  margin-top: 5dvb;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.ranked-btn{
+    margin-bottom: 2dvb;
 }
